fix freeze on scrolling